@@ -37,6 +37,7 @@ public:
 
     int32_t rinex_version;
     int32_t rinexobs_rate_ms;
+    std::string rinex_name;
     std::map<int, int> rtcm_msg_rate_ms;
 
     bool dump;
